# openintent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_v0.9.1.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: changelog.md  index.md
docs/api/: adapters.md  agents.md  client.md  exceptions.md  federation.md  models.md  server.md  workflow.md
docs/examples/: agent-lifecycle.md  agent-memory.md  coordinators.md  cost-retry.md  credential-vaults.md  cryptographic-identity.md  decorator-agents.md  distributed-tracing.md  federation.md  governance-arbitration.md  intent-lifecycle.md  leasing-concurrency.md  llm-adapters.md  llm-agents.md  mcp.md  messaging.md  multi-agent.md  portfolios.md  server-deployment.md  streaming.md  subscriptions-streaming.md  task-planning.md  triggers.md  verifiable-logs.md  yaml-workflows.md
docs/getting-started/: configuration.md  installation.md  llm-quickstart.md  quickstart.md
docs/guide/: access-control.md  adapters.md  agents.md  attachments.md  coordinators.md  cost-retry.md  cryptographic-identity.md  distributed-tracing.md  events.md  federation.md  governance.md  human-in-the-loop.md  intents.md  leasing.md  lifecycle.md  llm-agents.md  mcp.md  memory.md  messaging.md  portfolios.md  server.md  subscriptions.md  task-planning.md  triggers.md  vaults.md  verifiable-logs.md  workflows.md
docs/overrides/: home.html
docs/rfcs/: 0001-intent-objects.md  0002-intent-graphs.md  0003-agent-leasing.md  0004-governance-arbitration.md  0005-attachments.md  0006-subscriptions.md  0007-intent-portfolios.md  0008-llm-integration.md  0009-cost-tracking.md  0010-retry-policies.md  0011-access-control.md  0012-task-decomposition-planning.md  0013-coordinator-governance.md  0014-credential-vaults-tool-scoping.md  0015-agent-memory-persistent-state.md  0016-agent-lifecycle-health.md  0017-triggers-reactive-scheduling.md  0018-cryptographic-agent-identity.md  0019-verifiable-event-logs.md  0020-distributed-tracing.md  0021-agent-to-agent-messaging.md  0022-federation-protocol.md  0023-federation-security.md  0024-workflow-io-contracts.md  0025-human-in-the-loop.md  0026-suspension-container-interaction.md
docs/spec/: workflow-yaml.md
docs/stylesheets/: extra.css
examples/: agent_messaging.py  auth_identity.py  basic_usage.py  incident_response.py  mcp_agent.py  mcp_bridge.py  openai_multi_agent.py  portfolio_multi_intent.py  streaming_adapter.py
examples/agents/: README.md  coordinator.py  research_agent.py  worker.py
examples/compliance_review/: README.md  __init__.py  config.py  coordinator.py
examples/compliance_review/agents/: __init__.py  analyzer_agent.py  ocr_agent.py  report_agent.py  risk_agent.py
examples/compliance_review/dashboard/: app.py
examples/compliance_review/dashboard/templates/: index.html
examples/multi_agent/: README.md  __init__.py  config.py  coordinator.py  research_agent.py  writing_agent.py
examples/workflows/: README.md  compliance_review.yaml  content_pipeline.yaml  data_pipeline.yaml  hello_world.yaml  mcp_workflow.yaml  messaging_pipeline.yaml  research_assistant.yaml  research_pipeline.yaml
mcp-server/: .npmignore  NPM_SETUP.md  README.md  openintent-mcp.config.json  package.json  tsconfig.json
mcp-server/src/: client.ts  config.ts  index.ts  mcp-sdk.d.ts  resources.ts  security.ts  tools.ts
openintent/: __init__.py  agents.py  cli.py  client.py  demo_agents.py  exceptions.py  llm.py  mcp.py  models.py  streaming.py  validation.py  workflow.py
openintent/adapters/: __init__.py  anthropic_adapter.py  azure_openai_adapter.py  base.py  codex_utils.py  deepseek_adapter.py  gemini_adapter.py  grok_adapter.py  openai_adapter.py  openrouter_adapter.py
openintent/federation/: __init__.py  decorators.py  models.py  security.py
openintent/server/: __init__.py  __main__.py  app.py  cli.py  config.py  database.py  federation.py  tool_adapters.py
rfcs/: 0011-access-control.md
tests/: __init__.py  test_access_control.py  test_adapters.py  test_agents.py  test_federation.py  test_hitl.py  test_intent_graphs.py  test_llm.py  test_messaging.py  test_models.py  test_models_rfc0012_0017.py  test_models_rfc0018_0020.py  test_server.py  test_server_governance.py  test_server_rfc0012_0017.py  test_server_rfc0018_0020.py  test_tool_execution.py  test_validation.py  test_workflow.py  test_workflow_io.py
